--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -43,10 +43,10 @@ clusters [section]:
     {
         # The number of computing nodes
         nodes [fixed, integer]: 64
-        
+
         # The number of sockets per node
         sockets_per_node [fixed, integer]: 2
-        
+
         # The number of cores per socket
         cores_per_socket [fixed, integer]: 8
 
@@ -54,14 +54,14 @@ clusters [section]:
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
         threads_per_core [fixed, integer]: 2
-        
+
         # The amount of virtual memory per node (in GB)
         memory [fixed, real]: 32
-        
+
         # The number of NUMA domains per node
         numa_domains_per_node [fixed, None]: None
-        
-        # Suited for multi-node communication (and thus multi-node jobs) 
+
+        # Suited for multi-node communication (and thus multi-node jobs)
         multi_node_communication [fixed, boolean]: False
     }
 
@@ -70,10 +70,10 @@ clusters [section]:
     {
         # The number of computing nodes
         nodes [fixed, integer]: 160
-    
+
         # The number of sockets per node
         sockets_per_node [fixed, integer]: 2
-        
+
         # The number of cores per socket
         cores_per_socket [fixed, integer]: 8
 
@@ -81,26 +81,26 @@ clusters [section]:
         # Intel E5-2670
         # Reference: http://ark.intel.com/products/64595/Intel-Xeon-Processor-E5-2670-20M-Cache-2_60-GHz-8_00-GTs-Intel-QPI
         threads_per_core [fixed, integer]: 2
-        
+
         # The amount of virtual memory per node (in GB)
         memory [fixed, real]: 64
-        
+
         # The number of NUMA domains per node
         numa_domains_per_node [fixed, None]: None # unknown
-        
-        # Suited for multi-node communication (and thus multi-node jobs) 
+
+        # Suited for multi-node communication (and thus multi-node jobs)
         multi_node_communication [fixed, boolean]: True
     }
-    
+
     # The PHANPY cluster
     phanpy [section]: # 2 x 12-core Intel E5-2680v3
     {
         # The number of computing nodes
         nodes [fixed, integer]: 16
-        
+
         # The number of sockets per node
         sockets_per_node [fixed, integer]: 2
-        
+
         # The number of cores per socket
         cores_per_socket [fixed, integer]: 12
 
@@ -108,27 +108,27 @@ clusters [section]:
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
         threads_per_core [fixed, integer]: 2
-        
+
         # The amount of virtual memory per node (in GB)
         # yes this is actually 512 GB !
         memory [fixed, real]: 512
-        
+
         # The number of NUMA domains per node
         numa_domains_per_node [fixed, None]: None
-        
-        # Suited for multi-node communication (and thus multi-node jobs) 
+
+        # Suited for multi-node communication (and thus multi-node jobs)
         multi_node_communication [fixed, boolean]: True
     }
-    
+
     # The GOLETT cluster
     golett [section]: # 2 x 12-core Intel E5-2680v3
     {
         # The number of computing nodes
         nodes [fixed, integer]: 200
-        
+
         # The number of sockets per node
         sockets_per_node [fixed, integer]: 2
-        
+
         # The number of cores per socket
         cores_per_socket [fixed, integer]: 12
 
@@ -136,26 +136,26 @@ clusters [section]:
         # Intel E5-2680v3
         # Reference: http://ark.intel.com/products/81908/Intel-Xeon-Processor-E5-2680-v3-30M-Cache-2_50-GHz
         threads_per_core [fixed, integer]: 2
-        
+
         # The amount of virtual memory per node (in GB)
         memory [fixed, real]: 64
-        
+
         # The number of NUMA domains per node
         numa_domain_per_node [fixed, string]: None # unknown
-        
-        # Suited for multi-node communication (and thus multi-node jobs) 
+
+        # Suited for multi-node communication (and thus multi-node jobs)
         multi_node_communication [fixed, boolean]: True
     }
-    
+
     # The SWALOT cluster
     swalot [section]: # 2 x 10-core Intel E5-2660v3
     {
         # The number of computing nodes
         nodes [fixed, integer]: 128
-        
+
         # The number of sockets per node
         sockets_per_node [fixed, integer]: 2
-        
+
         # The number of cores per socket
         cores_per_socket [fixed, integer]: 10
 
@@ -163,14 +163,14 @@ clusters [section]:
         # Intel E5-2660v3
         # Reference: http://ark.intel.com/products/81706/Intel-Xeon-Processor-E5-2660-v3-25M-Cache-2_60-GHz
         threads_per_core [fixed, integer]: 2
-        
+
         # The amount of virtual memory per node (in GB)
         memory [fixed, real]: 128
-        
+
         # The number of NUMA domains per node
         numa_domains_per_node [fixed, None]: None # unknown
-        
-        # Suited for multi-node communication (and thus multi-node jobs) 
+
+        # Suited for multi-node communication (and thus multi-node jobs)
         multi_node_communication [fixed, boolean]: True
     }
 }
@@ -180,19 +180,19 @@ vpn [section]:
 {
     # Name of the VPN service
     service [required, string]: None
-    
+
     # Username for VPN
     user [required, string]: None
-    
+
     # Password for VPN
     password [required, string]: None
-    
+
     # Secret (?) for VPN
     secret [optional, string]: None
-    
+
     # Time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
     prompt_time_delay [optional, real]: 5.
-    
+
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
     not_for_dns_domain [fixed, string]: UGent.be
 }
@@ -202,3 +202,6 @@ port [fixed, None]: None
 
 # Name of private/public key pair necessary for connection (instead of password)
 key [required, string]: None
+
+# Password for unlocking the key
+key_password [required, string]: None
