--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -39,19 +39,19 @@ vpn [section]:
 {
     # Name of the VPN service
     service [required, string]: None
-    
+
     # Username for VPN
     user [required, string]: None
-    
+
     # Password for VPN
     password [required, string]: None
-    
+
     # Secret (?) for VPN
     secret [optional, string]: None
-    
+
     # Time delay (in seconds) for when the password prompt is still shown (even though the password is specified here)
     prompt_time_delay [optional, real]: 5.
-    
+
     # Search domain of the DNS server for which, if connected to it, the VPN connection is not necessary
     not_for_dns_domain [optional, string]: None
 }
@@ -61,3 +61,6 @@ port [optional, integer]: None
 
 # Name of private/public key pair necessary for connection (instead of password)
 key [optional, string]: None
+
+# Password for unlocking the key
+key_password [optional, string]: None
