Various small improvements

--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -64,3 +64,6 @@ key [optional, string]: None
 
 # Password for unlocking the key
 key_password [optional, string]: None
+
+# Command for viewing the disk quota
+quota_command [optional, string]: None
