--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -205,3 +205,6 @@ key [required, string]: None
 
 # Password for unlocking the key
 key_password [required, string]: None
+
+# Command for viewing the disk quota
+quota_command [string]: show_quota
