--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -61,3 +61,6 @@ key [optional, string]: None
 
 # Password for unlocking the key
 key_password [optional, string]: None
+
+# Command for viewing the disk quota
+quota_command [None]: None
