--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -208,3 +208,6 @@ key_password [required, string]: None
 
 # Command for viewing the disk quota
 quota_command [string]: show_quota
+
+# The connection protocol
+protocol [fixed, string]: ssh
