--- a/core/config/hosts/nancy.cfg
+++ b/core/config/hosts/nancy.cfg
@@ -64,3 +64,6 @@ key_password [optional, string]: None
 
 # Command for viewing the disk quota
 quota_command [None]: None
+
+# The connection protocol
+protocol [fixed, string]: ssh
