--- a/core/config/hosts/template.cfg
+++ b/core/config/hosts/template.cfg
@@ -67,3 +67,6 @@ key_password [optional, string]: None
 
 # Command for viewing the disk quota
 quota_command [optional, string]: None
+
+# The connection protocol
+protocol [optional, string]: ssh
