Fixed syntax mistakes in the host configuration templates

--- a/core/config/hosts/hpc.cfg
+++ b/core/config/hosts/hpc.cfg
@@ -207,7 +207,7 @@ key [required, string]: None
 key_password [required, string]: None
 
 # Command for viewing the disk quota
-quota_command [string]: show_quota
+quota_command [fixed, string]: show_quota
 
 # The connection protocol
 protocol [fixed, string]: ssh
