--- a/core/config/hosts/cindy.cfg
+++ b/core/config/hosts/cindy.cfg
@@ -63,7 +63,7 @@ key [optional, string]: None
 key_password [optional, string]: None
 
 # Command for viewing the disk quota
-quota_command [None]: None
+quota_command [fixed, None]: None
 
 # The connection protocol
 protocol [fixed, string]: ssh
