Set default scratch path for peggy to None

--- a/core/config/hosts/peggy.cfg
+++ b/core/config/hosts/peggy.cfg
@@ -8,7 +8,7 @@ user [required, string]: None
 password [required, string]: None
 
 # Output directory for lots of (temporary) data
-scratch_path [optional, string]: $VSC_SCRATCH_DELCATTY
+scratch_path [optional, string]: None
 
 # Output directory for SKIRT simulations
 output_path [optional, string]: None
